# intelligence-agent

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/analyzers/: __init__.py  llm_analyzer.py
src/bot/: __init__.py  conversation_memory.py  feishu_ws.py
src/collectors/: __init__.py  github.py  hackernews.py
src/notifiers/: __init__.py  dingtalk.py  feishu.py
